# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "API documentation for the Smart Fitness Tracker application.",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "smart-fitness-tracker-knr2.onrender.com",
   "basePath": "/",
   "tags": [
     {
@@ -26,7 +26,7 @@
     }
   ],
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/workouts/user/{userId}": {
@@ -1593,7 +1593,10 @@
     },
     "/nutrition/{nutritionId}": {
       "put": {
-        "description": "",
+        "tags": [
+          "Nutrition"
+        ],
+        "description": "Endpoint to update an existing nutrition entry.",
         "produces": [
           "application/json"
         ],
